server/infra/k8s/services/posts-srv.nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv-nodeport
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts-srv-nodeport
      protocol: TCP
      port: 4000
      targetPort: 4000
