server/infra/k8s/services/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingess-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: posts.com
    http:
      paths:
      - path: /posts
        backend:
          serviceName: posts-srv
          servicePort: 4000
